syntax = "proto3";

package profile_def.v1;

import "connection_def/v1/def.proto";
import "user_def/v1/def.proto";

message GetProfileRequest {
  string username /*                */ = 1;
  optional string current_user_id /**/ = 2;
}

message GetProfileResponse {
  // Base props
  string id /*                                        */ = 1;
  string name /*                                      */ = 2;
  string username /*                                  */ = 3;
  optional user_def.v1.Status status /*               */ = 4;
  optional string bio /*                              */ = 5;
  optional string rendered_bio /*                     */ = 6;
  optional string avatar_id /*                        */ = 7;
  optional string avatar_hex /*                       */ = 8;
  optional string banner_id /*                        */ = 9;
  optional string banner_hex /*                       */ = 10;
  string location /*                                  */ = 11;
  string created_at /*                                */ = 12;
  uint32 public_flags /*                              */ = 13;
  uint32 story_count /*                               */ = 14;
  uint32 follower_count /*                            */ = 15;
  // Following and friend lists can be private (optional=private)
  optional uint32 following_count /*                  */ = 16;
  optional uint32 friend_count /*                     */ = 17;
  bool is_private /*                                  */ = 18;
  repeated connection_def.v1.Connection connections /**/ = 19;
  // User specific props
  bool is_following /*                                */ = 20;
  bool is_follower /*                                 */ = 21;
  bool is_friend /*                                   */ = 22;
  bool is_subscribed /*                               */ = 23;
  bool is_friend_request_sent /*                      */ = 24;
  bool is_blocked_by_user /*                          */ = 25;
  bool is_blocking /*                                 */ = 26;
  bool is_muted /*                                    */ = 27;
  bool is_self /*                                     */ = 28;
}
